# pgrid

./: .env  .gitignore  =1.12  README.md  TASKLIST.md  TESTING.md  pent.json  pentagon-hex grid research followup.md  pentagon-hex grid research.md  pyproject.toml  requirements.md  requirements.txt  test_results.md  test_results.txt
docs/: ARCHITECTURE.md  ARCHIVED_TASKLIST.md  BIOME_BIBLE.md  CLEANUP.md  CLEANUP_REVIEW.md  INTEGRATION_PLAN.md  JSON_CONTRACT.md  MODULE_REFERENCE.md  POLYGRID_DISTORTION.md  POLYGRID_DISTORTION_FOLLOWUP.md  RENDERING_ISSUES.md  RENDERING_PIPELINE.md  TASKLIST.md  TILE_TEXTURE_MAPPING.md
examples/: minimal_grid.json
exports/: cli_r5.json  cli_test_r3.json  pent_r0.json  pent_r0_diagnostics.txt  pent_r1.json  pent_r1_diagnostics.txt  pent_r2.json  pent_r2_diagnostics.txt  pent_r3.json  pent_r3_diagnostics.txt  pent_r4.json  pent_r4_diagnostics.txt  pent_r5.json  pent_r5_diagnostics.txt
notebooks/: analytical_fill.ipynb  debug_pipeline.ipynb  rendering_diagnostics.ipynb
schemas/: globe.schema.json  polygrid.schema.json
scripts/: _script_utils.py  add_detail_cells.py  angle_diagnostics.py  audit_detail_cells.py  debug_globe_labels.py  debug_pipeline.py  debug_polygrids.py  demo.py  demo_assembly.py  demo_coastline.py  demo_cohesive_globe.py  demo_detail_globe.py  demo_forest_globe.py  demo_globe.py  demo_globe_3d.py  demo_mountains.py  demo_ocean_globe.py  demo_phase18_globe.py  demo_regions.py  demo_terrain.py  diag_compare_corner_paths.py  diag_corner_pairing.py  diag_directional_atlas.py  diag_globe_render.py  diag_pent_edge_sample.py  diag_pent_visual.py  diag_pentagon_atlas_content.py  diag_seam_pixel_compare.py  diag_vertex_chain.py  diag_winding_compare.py  globe_generation.sh  render_globe_from_tiles.py  render_polygrids.py  render_validation.py  run_fast.sh  run_tests.py  upgrade_detail_cells_indices.py  validate_polygon_cut.py  view_globe.py  view_globe_v3.py
tests/: conftest.py  test_adjacency.py  test_angle_solver.py  test_apron_grid.py  test_apron_texture.py  test_assembly.py  test_atlas_seams.py  test_biome_continuity.py  test_biome_pipeline.py  test_biome_render.py  test_biome_scatter.py  test_biome_topology.py  test_build_hex.py  test_coastline.py  test_column.py  test_composite.py  test_core_topology.py  test_corner_blend.py  test_detail_cell_contract.py  test_detail_cells_audit.py  test_detail_centers.py  test_detail_perf.py  test_detail_render.py  test_detail_terrain.py  test_detail_terrain_3d.py  test_determinism.py  test_diagnostics.py  test_features.py  test_globe.py  test_globe_renderer_v2.py  test_globe_terrain.py  test_goldberg.py  (+34 more)
(+156 files in other folders)
