[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polygrid"
version = "0.1.0"
description = "Topology-first polygrid data model and JSON contract."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]
render = ["matplotlib>=3.8"]
embed = ["numpy>=1.26", "scipy>=1.12"]

[project.scripts]
polygrid = "polygrid.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
