[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polygrid"
version = "0.1.0"
description = "Topology-first polygrid data model and JSON contract."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]
render = ["matplotlib>=3.8"]
embed = ["numpy>=1.26", "scipy>=1.12"]
terrain = ["opensimplex>=0.4", "numpy>=1.26", "scipy>=1.12", "Pillow>=10"]
# NOTE: the 'models' library (Goldberg polyhedra) is a local sibling package
# installed via `pip install -e ../models`.  It is NOT on PyPI, so it must
# not appear in [project.optional-dependencies].
globe = []
demo = ["pyglet>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["polygrid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "fast: Tests that run in < 3s per file (Phases 1-4, 5-7)",
    "medium: Tests that run in 3-30s per file (Goldberg, detail, rendering)",
    "slow: Tests that run in > 30s per file (globe integration)",
    "needs_models: Requires the models library (Goldberg polyhedra)",
]
